[gd_scene load_steps=7 format=3 uid="uid://ci1oflhreenmu"]

[ext_resource type="Texture2D" uid="uid://s3nle78iir38" path="res://scenes/levels/level4/assets/Greed_Game_BG.png" id="1_bdelo"]
[ext_resource type="Script" path="res://scenes/levels/level4/level4.gd" id="1_vaijh"]
[ext_resource type="Texture2D" uid="uid://ifb1qr3hw2o4" path="res://scenes/levels/level4/assets/GoodTicket.png" id="2_aota8"]
[ext_resource type="Texture2D" uid="uid://cfp0fi7afxq4e" path="res://scenes/levels/level4/assets/BadTicket.png" id="4_pe1bv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hayi7"]
size = Vector2(67, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p016c"]
size = Vector2(123, 68)

[node name="Level4" type="Node2D"]
script = ExtResource("1_vaijh")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
texture_filter = 1
offset_right = 1000.0
offset_bottom = 648.0
texture = ExtResource("1_bdelo")

[node name="BadTarget" type="Area2D" parent="."]
z_index = 1
position = Vector2(272, -92)
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="BadTarget"]
shape = SubResource("RectangleShape2D_hayi7")

[node name="Sprite2D" type="Sprite2D" parent="BadTarget"]
texture_filter = 1
scale = Vector2(2.17647, 2.17647)
texture = ExtResource("4_pe1bv")

[node name="Target" type="Area2D" parent="."]
position = Vector2(152, -93)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target"]
shape = SubResource("RectangleShape2D_p016c")

[node name="Sprite2D" type="Sprite2D" parent="Target"]
texture_filter = 1
position = Vector2(-3.8147e-06, -9.53674e-06)
scale = Vector2(3.91176, 3.91176)
texture = ExtResource("2_aota8")

[node name="RespawnTimer" type="Timer" parent="Target"]
one_shot = true

[node name="TargetSpawner" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="BadTargetSpawner" type="Timer" parent="."]

[connection signal="mouse_entered" from="BadTarget" to="." method="_on_bad_target_mouse_entered"]
[connection signal="mouse_exited" from="BadTarget" to="." method="_on_bad_target_mouse_exited"]
[connection signal="mouse_entered" from="Target" to="." method="_on_target_mouse_entered"]
[connection signal="mouse_exited" from="Target" to="." method="_on_target_mouse_exited"]
[connection signal="timeout" from="Target/RespawnTimer" to="." method="_spawn_target"]
[connection signal="timeout" from="TargetSpawner" to="." method="_spawn_target"]
[connection signal="timeout" from="BadTargetSpawner" to="." method="_spawn_bad_target"]
